--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,10 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>14 авг : <DD><a href="/catalog/cat63.shtml"  title="Новые товары"><span class="title">Фасадные валики</span><span class="dop"> Maxprofi</span></a><br>
+  <DT>14 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/герметика</span><span class="dop"> усиленный</span></a><br>
+  <DT>14 авг : <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Поролоновые валики</span><span class="dop"> Moltopren</span></a><br>
+  <DT>10 авг : <DD><a href="/catalog/cat609.shtml" title="Новые товары"><span class="title">Труборезы</span><span class="dop"> ручные, ладонные</span></a><br>
+  <DT>03 авг : <DD><a href="/catalog/cat429.shtml" title="Новые товары"><span class="title">Валики прижимные</span><span class="dop"> HARDY</span></a><br>
   <DT>03 авг : <DD><a href="/catalog/cat429.shtml" title="Новые товары"><span class="title">Валики прижимные</span><span class="dop"> HARDY</span></a><br>
   <DT>03 авг : <DD><a href="/catalog/cat322.shtml" title="Новый товар"><span class="title">Макловица для грунтовок</span><span class="dop"></span></a><br>
   <DT>03 авг : <DD><a href="/catalog/cat263.shtml" title="Новый товар"><span class="title">Очки защитные</span><span class="dop"> HARDY</span></a><br>
@@ -7,12 +12,6 @@
   <DT>02 авг : <DD><a href="/catalog/cat219.shtml" title="Новые товары"><span class="title">Плиткорезы ручные</span><span class="dop"> HARDY</span></a><br>
   <DT>31 июл: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены</span><span class="dop"></span></a><br>
   <DT>31 июл: <DD><a href="/catalog/cat474.shtml" title="Новые товары"><span class="title">Ножницы обойные</span><span class="dop"> HARDY</span></a><br>
-  <DT>07 июл: <DD><a href="/catalog/cat174.shtml" title="Новые товары"><span class="title">Ключи имбусовые</span><span class="dop"> GROSS</span></a><br>
-  <DT>05 июл: <DD><a href="/catalog/cat554.shtml" title="Цены снижены"><span class="title">Профес. маляр. валики</span><span class="dop"> ProPlus</span></a><br>
-  <DT>05 июл: <DD><a href="/catalog/cat121.shtml" title="Новые товары"><span class="title">Плоскогубцы</span><span class="dop"> BOHRER</span></a><br>
-  <DT>04 июл: <DD><a href="/catalog/cat278.shtml" title="Новые товары"><span class="title">Провод гибкий</span><span class="dop"> ПВСнг(А)-LS</span></a><br>
-  <DT>03 июл: <DD><a href="/catalog/cat301.shtml" title="Новые товары"><span class="title">Уровни магнитные</span><span class="dop"> HARDY</span></a><br>
-  <DT>03 июл: <DD><a href="/catalog/cat591.shtml" title="Новый товар"><span class="title">Лента монтажная напольная</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
