--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,9 @@
+<DT>07 июл: <DD><a href="/catalog/cat174.shtml" title="Новые товары"><span class="title">Ключи имбусовые</span><span class="dop"> GROSS</span></a><br>
+<DT>05 июл: <DD><a href="/catalog/cat554.shtml" title="Цены снижены"><span class="title">Профес. маляр. валики</span><span class="dop"> ProPlus</span></a><br>
+<DT>05 июл: <DD><a href="/catalog/cat121.shtml" title="Новые товары"><span class="title">Плоскогубцы</span><span class="dop"> BOHRER</span></a><br>
+<DT>04 июл: <DD><a href="/catalog/cat278.shtml" title="Новые товары"><span class="title">Провод гибкий</span><span class="dop"> ПВСнг(А)-LS</span></a><br>
+<DT>03 июл: <DD><a href="/catalog/cat301.shtml" title="Новые товары"><span class="title">Уровни магнитные</span><span class="dop"> HARDY</span></a><br>
+<DT>03 июл: <DD><a href="/catalog/cat591.shtml" title="Новый товар"><span class="title">Лента монтажная напольная</span><span class="dop"></span></a><br>
 <DT>28 июн: <DD><a href="/catalog/cat514.shtml" title="Расширен ассортимент"><span class="title">Насадки на миксер</span><span class="dop"> HARDY</span></a><br>
 <DT>28 июн: <DD><a href="/catalog/cat107.shtml" title="Расширен ассортимент"><span class="title">Строительные ножи</span><span class="dop"> HARDY</span></a><br>
 <DT>27 июн: <DD><a href="/catalog/cat106.shtml" title="Новые товары"><span class="title">Клинья для плитки</span><span class="dop"> HARDY</span></a><br>
