--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,6 @@
+<DT>02 авг : <DD><a href="/catalog/cat219.shtml" title="Новые товары"><span class="title">Плиткорезы ручные</span><span class="dop"> HARDY</span></a><br>
+<DT>31 июл: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены</span><span class="dop"></span></a><br>
+<DT>31 июл: <DD><a href="/catalog/cat474.shtml" title="Новые товары"><span class="title">Ножницы обойные</span><span class="dop"> HARDY</span></a><br>
 <DT>07 июл: <DD><a href="/catalog/cat174.shtml" title="Новые товары"><span class="title">Ключи имбусовые</span><span class="dop"> GROSS</span></a><br>
 <DT>05 июл: <DD><a href="/catalog/cat554.shtml" title="Цены снижены"><span class="title">Профес. маляр. валики</span><span class="dop"> ProPlus</span></a><br>
 <DT>05 июл: <DD><a href="/catalog/cat121.shtml" title="Новые товары"><span class="title">Плоскогубцы</span><span class="dop"> BOHRER</span></a><br>
