--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -18,6 +18,8 @@
 {obj_fld}{51}{42}
 {obj_fld}{51}{14}{18}
 {obj_fld}{66}{51}{42}
+  
+<p class="callprice"></p>
 ==============================
   https://google.gik-team.com/?q=%D0%BF%D1%80%D0%B8%D0%BA%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5+%D0%BF%D0%BE%D0%B7%D0%B4%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F+%D1%81+8+%D0%BC%D0%B0%D1%80%D1%82%D0%B0
 ==============================
@@ -35,7 +37,7 @@
 <div class="ref">РАСПРОДАЖА строительных рулеток!{REL_CAT}</div>
 <p><b>РАСПРОДАЖА кистей плоских!</b></p>
 РАСПРОДАЖА 1
-==============================
+============================== Это вставлять в CMS стр. "Редактирование/Удаление категории" в поле "Описание":
 <div class="refbanner"><a href="cat203.shtml"><table><tr><td class="refbantab"><table cellpadding="4">
   <tr class="hdr"><td colspan="4">а также: Снегоуборочный инвентарь</td></tr><tr>
   <td
