--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 сен: <DD><a href="/catalog/cat572.shtml" title="Новые товары"><span class="title">Плёнка защитная п/э</span><span class="dop"> HARDY</span></a><br>
   <DT>25 авг : <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"></span></a><br>
   <DT>17 авг : <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
   <DT>16 авг : <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные, виниловые перчатки</span><span class="dop"></span></a><br>
