--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 сен: <DD><a href="/catalog/cat610.shtml" title="Новые товары"><span class="title">Огнетушители</span><span class="dop"></span></a><br>
   <DT>19 сен: <DD><a href="/catalog/cat541.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Шпатели фасадные</span><span class="dop">, нерж. ст.</span></a><br>
   <DT>18 сен: <DD><a href="/catalog/cat24.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>18 сен: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки нерж. ст.</span><span class="dop"> HARDY</span></a><br>
