--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 сен: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
   <DT>20 сен: <DD><a href="/catalog/cat610.shtml" title="Новые товары"><span class="title">Огнетушители</span><span class="dop"></span></a><br>
   <DT>19 сен: <DD><a href="/catalog/cat541.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Шпатели фасадные</span><span class="dop">, нерж. ст.</span></a><br>
   <DT>18 сен: <DD><a href="/catalog/cat24.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
@@ -10,13 +11,6 @@
   <DT>16 авг : <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные, виниловые перчатки</span><span class="dop"></span></a><br>
   <DT>16 авг : <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож для минеральной ваты</span><span class="dop"></span></a><br>
   <DT>14 авг : <DD><a href="/catalog/cat585.shtml" title="Новые товары"><span class="title">Фасадные валики</span><span class="dop"> Maxprofi</span></a><br>
-  <DT>14 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
-  <DT>14 авг : <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Поролоновые валики</span><span class="dop"> Moltopren</span></a><br>
-  <DT>10 авг : <DD><a href="/catalog/cat609.shtml" title="Новые товары"><span class="title">Труборезы</span><span class="dop"> ручные, ладонные</span></a><br>
-  <DT>03 авг : <DD><a href="/catalog/cat429.shtml" title="Новые товары"><span class="title">Валики прижимные</span><span class="dop"> HARDY</span></a><br>
-  <DT>03 авг : <DD><a href="/catalog/cat322.shtml" title="Новый товар"><span class="title">Макловица для грунтовок</span><span class="dop"></span></a><br>
-  <DT>03 авг : <DD><a href="/catalog/cat263.shtml" title="Новый товар"><span class="title">Очки защитные</span><span class="dop"> HARDY</span></a><br>
-  <DT>02 авг : <DD><a href="/catalog/cat28.shtml"  title="Новые товары"><span class="title">Диски алмазные Турбо</span><span class="dop"> GR&Ouml;NE</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
