--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -28,7 +28,11 @@
 <div class="ref">{REL_CAT}</div>
 Свойства для сортировки - №№ категорий:
 {1,2,3}
-==============================
+============================== Инфоблоки
+<a href="/about/contact.shtml" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a></p>
+<p class="adres time">с понедельника по пятницу, с <b>8:00</b> до <b>18:00</b></p>
+<p class="adres cm">Заявки онлайн круглосуточно
+============================== Остатки
 {obj_fld}{51}{79}{42}
 <br><br><a href="/catalog/cat490.shtml">РАСПРОДАЖА строительных рулеток!</a>
 <br><b>Распродажа ограничена количеством товара на складе, уточняйте у менеджеров.</b>
@@ -37,6 +41,8 @@
 <div class="ref">РАСПРОДАЖА строительных рулеток!{REL_CAT}</div>
 <p><b>РАСПРОДАЖА кистей плоских!</b></p>
 РАСПРОДАЖА 1
+<table class="ref"><tr><td class="adv">РАСПРОДАЖА кистей плоских!<td>{REL_CAT}</table>
+<table class="ref"><tr><td class="adv">Рукоятки для сменных валиков:<td>{REL_CAT}</table>
 ============================== Это вставлять в CMS стр. "Редактирование/Удаление категории" в поле "Описание":
 <div class="refbanner"><a href="cat203.shtml"><table><tr><td class="refbantab"><table cellpadding="4">
   <tr class="hdr"><td colspan="4">а также: Снегоуборочный инвентарь</td></tr><tr>
