--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,16 +1,20 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>31 окт: <DD><a href="/catalog/cat95.shtml"  title="Новые товары"><span class="title">Сапоги кожаные утепленные</span><span class="dop"></span></a><br>
+  <DT>31 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер металл.</span><span class="dop"> "All-Be-Fix"</span></a><br>
+  <DT>26 окт: <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент"><span class="title">Диски алмазные сплошные</span><span class="dop"></span></a><br>
+  <DT>26 окт: <DD><a href="/catalog/cat155.shtml" title="Новый товар"><span class="title">Гладилка пластиковая</span><span class="dop"> HARDY</span></a><br>
+  <DT>23 окт: <DD><a href="/catalog/cat79.shtml"  title="Новые товары"><span class="title">Свёрла по бетону</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>19 окт: <DD><a href="/catalog/cat152.shtml" title="Новый товар"><span class="title">Набор шпателей</span><span class="dop"> "японских"</span></a><br>
+  <DT>18 окт: <DD><a href="/catalog/cat577.shtml" title="Расширен ассортимент"><span class="title">Губки абразив. шлифовальные</span><span class="dop"></span></a><br>
+  <DT>15 окт: <DD><a href="/catalog/cat298.shtml" title="Новые товары"><span class="title">Шлифовальные фибровые круги</span><span class="dop"></span></a><br>
+  <DT>14 окт: <DD><a href="/catalog/cat154.shtml" title="Новый товар"><span class="title">Тёрка, черный каучук</span><span class="dop"> HARDY</span></a><br>
+  <DT>13 окт: <DD><a href="/catalog/cat67.shtml"  title="Расширен ассортимент"><span class="title">Сеткодержатели и шлиф. бруски</span><span class="dop"></span></a><br>
   <DT>27 сен: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
   <DT>20 сен: <DD><a href="/catalog/cat610.shtml" title="Новые товары"><span class="title">Огнетушители</span><span class="dop"></span></a><br>
   <DT>19 сен: <DD><a href="/catalog/cat541.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Шпатели фасадные</span><span class="dop">, нерж. ст.</span></a><br>
   <DT>18 сен: <DD><a href="/catalog/cat24.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>18 сен: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки нерж. ст.</span><span class="dop"> HARDY</span></a><br>
-  <DT>03 сен: <DD><a href="/catalog/cat572.shtml" title="Новые товары"><span class="title">Плёнка защитная п/э</span><span class="dop"> HARDY</span></a><br>
-  <DT>25 авг : <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"></span></a><br>
-  <DT>17 авг : <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
-  <DT>16 авг : <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные, виниловые перчатки</span><span class="dop"></span></a><br>
-  <DT>16 авг : <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож для минеральной ваты</span><span class="dop"></span></a><br>
-  <DT>14 авг : <DD><a href="/catalog/cat585.shtml" title="Новые товары"><span class="title">Фасадные валики</span><span class="dop"> Maxprofi</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
