--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,9 @@
+<DT>03 сен: <DD><a href="/catalog/cat572.shtml" title="Новые товары"><span class="title">Плёнка защитная п/э</span><span class="dop"> HARDY</span></a><br>
+<DT>25 авг : <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"></span></a><br>
+<DT>17 авг : <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
+<DT>16 авг : <DD><a href="/catalog/cat88.shtml"  title="Новые товары"><span class="title">Латексные, виниловые перчатки</span><span class="dop"></span></a><br>
+<DT>16 авг : <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож для минеральной ваты</span><span class="dop"></span></a><br>
+<DT>14 авг : <DD><a href="/catalog/cat585.shtml" title="Новые товары"><span class="title">Фасадные валики</span><span class="dop"> Maxprofi</span></a><br>
 <DT>14 авг : <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/гермет.</span><span class="dop"> усиленный</span></a><br>
 <DT>14 авг : <DD><a href="/catalog/cat54.shtml"  title="Расширен ассортимент"><span class="title">Поролоновые валики</span><span class="dop"> Moltopren</span></a><br>
 <DT>10 авг : <DD><a href="/catalog/cat609.shtml" title="Новые товары"><span class="title">Труборезы</span><span class="dop"> ручные, ладонные</span></a><br>
