--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,11 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 ноя: <DD><a href="/catalog/cat99.shtml"  title="Существенно расширен ассортимент"><span class="title">Электроинструмент</span><span class="dop"> GR&Ouml;NE:</span></a><br>
+  &emsp;&emsp;&emsp;&ensp;<a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">болгарки</span></a>,
+                          <a href="/catalog/cat199.shtml" title="Расширен ассортимент"><span class="title">перфораторы</span></a>,<br>
+  &emsp;&emsp;&emsp;&ensp;<a href="/catalog/cat216.shtml" title="Новые товары"><span class="title">дрели</span></a>,
+                          <a href="/catalog/cat201.shtml" title="Новый товар"><span class="title">шуруповерт</span></a>,
+                          <a href="/catalog/cat431.shtml" title="Расширен ассортимент"><span class="title">миксеры</span></a><br>
   <DT>31 окт: <DD><a href="/catalog/cat95.shtml"  title="Новые товары"><span class="title">Сапоги кожаные утепленные</span><span class="dop"></span></a><br>
   <DT>31 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер металл.</span><span class="dop"> "All-Be-Fix"</span></a><br>
   <DT>26 окт: <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент"><span class="title">Диски алмазные сплошные</span><span class="dop"></span></a><br>
@@ -9,7 +15,7 @@
   <DT>18 окт: <DD><a href="/catalog/cat577.shtml" title="Расширен ассортимент"><span class="title">Губки абразив. шлифовальные</span><span class="dop"></span></a><br>
   <DT>15 окт: <DD><a href="/catalog/cat298.shtml" title="Новые товары"><span class="title">Шлифовальные фибровые круги</span><span class="dop"></span></a><br>
   <DT>14 окт: <DD><a href="/catalog/cat154.shtml" title="Новый товар"><span class="title">Тёрка, черный каучук</span><span class="dop"> HARDY</span></a><br>
-  <DT>13 окт: <DD><a href="/catalog/cat67.shtml"  title="Расширен ассортимент"><span class="title">Сеткодержатели и шлиф. бруски</span><span class="dop"></span></a><br>
+  <DT>13 окт: <DD><a href="/catalog/cat67.shtml"  title="Расширен ассортимент"><span class="title">Сеткодержатели и шлиф.бруски</span><span class="dop"></span></a><br>
   <DT>27 сен: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
   <DT>20 сен: <DD><a href="/catalog/cat610.shtml" title="Новые товары"><span class="title">Огнетушители</span><span class="dop"></span></a><br>
   <DT>19 сен: <DD><a href="/catalog/cat541.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Шпатели фасадные</span><span class="dop">, нерж. ст.</span></a><br>
