--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>20 ноя: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтаж. пена</span><span class="dop"> KIM TEC зимняя</span></a><br>
+  <DT>20 ноя: <DD><a href="/catalog/cat245.shtml" title="Новые товары"><span class="title">Силовые электроудлинители</span><span class="dop"></span></a><br>
   <DT>03 ноя: <DD><a href="/catalog/cat99.shtml"  title="Существенно расширен ассортимент"><span class="title">Электроинструмент</span><span class="dop"> GR&Ouml;NE:</span></a><br>
   &emsp;&emsp;&emsp;&ensp;<a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">болгарки</span></a>,
                           <a href="/catalog/cat199.shtml" title="Расширен ассортимент"><span class="title">перфораторы</span></a>,<br>
@@ -16,11 +18,6 @@
   <DT>15 окт: <DD><a href="/catalog/cat298.shtml" title="Новые товары"><span class="title">Шлифовальные фибровые круги</span><span class="dop"></span></a><br>
   <DT>14 окт: <DD><a href="/catalog/cat154.shtml" title="Новый товар"><span class="title">Тёрка, черный каучук</span><span class="dop"> HARDY</span></a><br>
   <DT>13 окт: <DD><a href="/catalog/cat67.shtml"  title="Расширен ассортимент"><span class="title">Сеткодержатели и шлиф.бруски</span><span class="dop"></span></a><br>
-  <DT>27 сен: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
-  <DT>20 сен: <DD><a href="/catalog/cat610.shtml" title="Новые товары"><span class="title">Огнетушители</span><span class="dop"></span></a><br>
-  <DT>19 сен: <DD><a href="/catalog/cat541.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Шпатели фасадные</span><span class="dop">, нерж. ст.</span></a><br>
-  <DT>18 сен: <DD><a href="/catalog/cat24.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
-  <DT>18 сен: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки нерж. ст.</span><span class="dop"> HARDY</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
