--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,8 @@
+<DT>27 сен: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
+<DT>20 сен: <DD><a href="/catalog/cat610.shtml" title="Новые товары"><span class="title">Огнетушители</span><span class="dop"></span></a><br>
+<DT>19 сен: <DD><a href="/catalog/cat541.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Шпатели фасадные</span><span class="dop">, нерж. ст.</span></a><br>
+<DT>18 сен: <DD><a href="/catalog/cat24.shtml"  title="Снижены цены на самые ходовые размеры"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
+<DT>18 сен: <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки нерж. ст.</span><span class="dop"> HARDY</span></a><br>
 <DT>03 сен: <DD><a href="/catalog/cat572.shtml" title="Новые товары"><span class="title">Плёнка защитная п/э</span><span class="dop"> HARDY</span></a><br>
 <DT>25 авг : <DD><a href="/catalog/cat190.shtml" title="Новые товары"><span class="title">Прожекторы светодиодные</span><span class="dop"></span></a><br>
 <DT>17 авг : <DD><a href="/catalog/cat510.shtml" title="Расширен ассортимент"><span class="title">Гладилки из нерж. стали</span><span class="dop"></span></a><br>
