--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>29 ноя: <DD><a href="/catalog/cat510.shtml" title="Новый товар"><span class="title">Гладилка закругленная</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
+  <DT>25 ноя: <DD><a href="/catalog/cat89.shtml"  title="Новые товары"><span class="title">Краги спилковые</span><span class="dop"> «Blue Welder»</span></a><br>
   <DT>20 ноя: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтаж. пена</span><span class="dop"> KIM TEC зимняя</span></a><br>
   <DT>20 ноя: <DD><a href="/catalog/cat245.shtml" title="Новые товары"><span class="title">Силовые электроудлинители</span><span class="dop"></span></a><br>
   <DT>03 ноя: <DD><a href="/catalog/cat99.shtml"  title="Существенно расширен ассортимент"><span class="title">Электроинструмент</span><span class="dop"> GR&Ouml;NE:</span></a><br>
@@ -11,13 +13,9 @@
   <DT>31 окт: <DD><a href="/catalog/cat95.shtml"  title="Новые товары"><span class="title">Сапоги кожаные утепленные</span><span class="dop"></span></a><br>
   <DT>31 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер металл.</span><span class="dop"> "All-Be-Fix"</span></a><br>
   <DT>26 окт: <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент"><span class="title">Диски алмазные сплошные</span><span class="dop"></span></a><br>
-  <DT>26 окт: <DD><a href="/catalog/cat155.shtml" title="Новый товар"><span class="title">Гладилка пластиковая</span><span class="dop"> HARDY</span></a><br>
   <DT>23 окт: <DD><a href="/catalog/cat79.shtml"  title="Новые товары"><span class="title">Свёрла по бетону</span><span class="dop"> HAGWERT</span></a><br>
   <DT>19 окт: <DD><a href="/catalog/cat152.shtml" title="Новый товар"><span class="title">Набор шпателей</span><span class="dop"> "японских"</span></a><br>
   <DT>18 окт: <DD><a href="/catalog/cat577.shtml" title="Расширен ассортимент"><span class="title">Губки абразив. шлифовальные</span><span class="dop"></span></a><br>
-  <DT>15 окт: <DD><a href="/catalog/cat298.shtml" title="Новые товары"><span class="title">Шлифовальные фибровые круги</span><span class="dop"></span></a><br>
-  <DT>14 окт: <DD><a href="/catalog/cat154.shtml" title="Новый товар"><span class="title">Тёрка, черный каучук</span><span class="dop"> HARDY</span></a><br>
-  <DT>13 окт: <DD><a href="/catalog/cat67.shtml"  title="Расширен ассортимент"><span class="title">Сеткодержатели и шлиф.бруски</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
