--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,6 @@
+<DT>15 окт: <DD><a href="/catalog/cat298.shtml" title="Новые товары"><span class="title">Шлифовальные фибровые круги</span><span class="dop"></span></a><br>
+<DT>14 окт: <DD><a href="/catalog/cat154.shtml" title="Новый товар"><span class="title">Тёрка, черный каучук</span><span class="dop"> HARDY</span></a><br>
+<DT>13 окт: <DD><a href="/catalog/cat67.shtml"  title="Расширен ассортимент"><span class="title">Сеткодержатели и шлиф.бруски</span><span class="dop"></span></a><br>
 <DT>27 сен: <DD><a href="/catalog/cat376.shtml" title="Новые товары"><span class="title">Масляные радиаторы</span><span class="dop"> OFR</span></a><br>
 <DT>20 сен: <DD><a href="/catalog/cat610.shtml" title="Новые товары"><span class="title">Огнетушители</span><span class="dop"></span></a><br>
 <DT>19 сен: <DD><a href="/catalog/cat541.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Шпатели фасадные</span><span class="dop">, нерж. ст.</span></a><br>
