1st with IJ2017

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 дек: <DD><a href="/catalog/cat618.shtml" title="Новый товар"><span class="title">Промышленный пылесос</span><span class="dop"> GR&Ouml;NE</span></a><br>
   <DT>29 ноя: <DD><a href="/catalog/cat510.shtml" title="Новый товар"><span class="title">Гладилка закругленная</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
   <DT>25 ноя: <DD><a href="/catalog/cat89.shtml"  title="Новые товары"><span class="title">Краги спилковые</span><span class="dop"> «Blue Welder»</span></a><br>
   <DT>20 ноя: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтаж. пена</span><span class="dop"> KIM TEC зимняя</span></a><br>
