--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>22 дек: <DD><a href="/catalog/cat521.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Распродажа валиков</span><span class="dop"> Eurofaza!!!</span></a><br>
+  <DT>21 дек: <DD><a href="/catalog/cat525.shtml" title="Расширен ассортимент"><span class="title">Валики велюровые</span><span class="dop"> HARDY</span></a><br>
   <DT>13 дек: <DD><a href="/catalog/cat618.shtml" title="Новый товар"><span class="title">Промышленный пылесос</span><span class="dop"> GR&Ouml;NE</span></a><br>
   <DT>29 ноя: <DD><a href="/catalog/cat510.shtml" title="Новый товар"><span class="title">Гладилка закругленная</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
   <DT>25 ноя: <DD><a href="/catalog/cat89.shtml"  title="Новые товары"><span class="title">Краги спилковые</span><span class="dop"> «Blue Welder»</span></a><br>
@@ -11,12 +13,6 @@
   &emsp;&emsp;&emsp;&ensp;<a href="/catalog/cat216.shtml" title="Новые товары"><span class="title">дрели</span></a>,
                           <a href="/catalog/cat201.shtml" title="Новый товар"><span class="title">шуруповерт</span></a>,
                           <a href="/catalog/cat431.shtml" title="Расширен ассортимент"><span class="title">миксеры</span></a><br>
-  <DT>31 окт: <DD><a href="/catalog/cat95.shtml"  title="Новые товары"><span class="title">Сапоги кожаные утепленные</span><span class="dop"></span></a><br>
-  <DT>31 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер металл.</span><span class="dop"> "All-Be-Fix"</span></a><br>
-  <DT>26 окт: <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент"><span class="title">Диски алмазные сплошные</span><span class="dop"></span></a><br>
-  <DT>23 окт: <DD><a href="/catalog/cat79.shtml"  title="Новые товары"><span class="title">Свёрла по бетону</span><span class="dop"> HAGWERT</span></a><br>
-  <DT>19 окт: <DD><a href="/catalog/cat152.shtml" title="Новый товар"><span class="title">Набор шпателей</span><span class="dop"> "японских"</span></a><br>
-  <DT>18 окт: <DD><a href="/catalog/cat577.shtml" title="Расширен ассортимент"><span class="title">Губки абразив. шлифовальные</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
