--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,9 @@
+<DT>31 окт: <DD><a href="/catalog/cat95.shtml"  title="Новые товары"><span class="title">Сапоги кожаные утепленные</span><span class="dop"></span></a><br>
+<DT>31 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер металл.</span><span class="dop"> "All-Be-Fix"</span></a><br>
+<DT>26 окт: <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент"><span class="title">Диски алмазные сплошные</span><span class="dop"></span></a><br>
+<DT>23 окт: <DD><a href="/catalog/cat79.shtml"  title="Новые товары"><span class="title">Свёрла по бетону</span><span class="dop"> HAGWERT</span></a><br>
+<DT>19 окт: <DD><a href="/catalog/cat152.shtml" title="Новый товар"><span class="title">Набор шпателей</span><span class="dop"> "японских"</span></a><br>
+<DT>18 окт: <DD><a href="/catalog/cat577.shtml" title="Расширен ассортимент"><span class="title">Губки абразив. шлифовальные</span><span class="dop"></span></a><br>
 <DT>15 окт: <DD><a href="/catalog/cat298.shtml" title="Новые товары"><span class="title">Шлифовальные фибровые круги</span><span class="dop"></span></a><br>
 <DT>14 окт: <DD><a href="/catalog/cat154.shtml" title="Новый товар"><span class="title">Тёрка, черный каучук</span><span class="dop"> HARDY</span></a><br>
 <DT>13 окт: <DD><a href="/catalog/cat67.shtml"  title="Расширен ассортимент"><span class="title">Сеткодержатели и шлиф.бруски</span><span class="dop"></span></a><br>
