--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>25 дек: <DD><a href="/catalog/cat519.shtml" title="Значительно расширен ассортимент"><span class="title">Фасадные валики</span><span class="dop"> MaxProfi</span></a><br>
+  <DT>25 дек: <DD><a href="/catalog/cat153.shtml" title="Новые товары"><span class="title">Кельмы угловые</span><span class="dop"> HARDY</span></a><br>
   <DT>22 дек: <DD><a href="/catalog/cat521.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Распродажа валиков</span><span class="dop"> Eurofaza!!!</span></a><br>
   <DT>21 дек: <DD><a href="/catalog/cat525.shtml" title="Расширен ассортимент"><span class="title">Валики велюровые</span><span class="dop"> HARDY</span></a><br>
   <DT>13 дек: <DD><a href="/catalog/cat618.shtml" title="Новый товар"><span class="title">Промышленный пылесос</span><span class="dop"> GR&Ouml;NE</span></a><br>
