--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -20,6 +20,8 @@
 {obj_fld}{66}{51}{42}
   
 <p class="callprice"></p>
+============================== Свойство "Описание"
+<p class="onlyrest"></p>
 ==============================
   https://google.gik-team.com/?q=%D0%BF%D1%80%D0%B8%D0%BA%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5+%D0%BF%D0%BE%D0%B7%D0%B4%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F+%D1%81+8+%D0%BC%D0%B0%D1%80%D1%82%D0%B0
 ==============================
@@ -27,7 +29,7 @@
 <table class="ref"><tr><td>{REL_CAT}</table>
 <div class="ref">{REL_CAT}</div>
 Свойства для сортировки - №№ категорий:
-{1,2,3}
+{507,508,516}
 ============================== Инфоблоки
 <a href="/about/contact.shtml" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a></p>
 <p class="adres time">с понедельника по пятницу, с <b>8:00</b> до <b>18:00</b></p>
