The last work day

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>15 янв: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Торцевые головки</span></a> <a href="/catalog/cat262.shtml" title="Наборы торцевых головок: Расширен ассортимент"><span class="dop">OMBRA</span></a><br>
+  <DT>15 янв: <DD><a href="/catalog/cat265.shtml" title="Новые товары"><span class="title">Трещотки</span><span class="dop"> THORVIK, JONNESWAY</span></a><br>
   <DT>25 дек: <DD><a href="/catalog/cat519.shtml" title="Значительно расширен ассортимент"><span class="title">Фасадные валики</span><span class="dop"> MaxProfi</span></a><br>
   <DT>25 дек: <DD><a href="/catalog/cat153.shtml" title="Новые товары"><span class="title">Кельмы угловые</span><span class="dop"> HARDY</span></a><br>
   <DT>22 дек: <DD><a href="/catalog/cat521.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Распродажа валиков</span><span class="dop"> Eurofaza!!!</span></a><br>
