--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,13 @@
+<DT>29 ноя: <DD><a href="/catalog/cat510.shtml" title="Новый товар"><span class="title">Гладилка закругленная</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
+<DT>25 ноя: <DD><a href="/catalog/cat89.shtml"  title="Новые товары"><span class="title">Краги спилковые</span><span class="dop"> «Blue Welder»</span></a><br>
+<DT>20 ноя: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтаж. пена</span><span class="dop"> KIM TEC зимняя</span></a><br>
+<DT>20 ноя: <DD><a href="/catalog/cat245.shtml" title="Новые товары"><span class="title">Силовые электроудлинители</span><span class="dop"></span></a><br>
+<DT>03 ноя: <DD><a href="/catalog/cat99.shtml"  title="Существенно расширен ассортимент"><span class="title">Электроинструмент</span><span class="dop"> GR&Ouml;NE:</span></a><br>
+  &emsp;&emsp;&emsp;&ensp;<a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">болгарки</span></a>,
+  <a href="/catalog/cat199.shtml" title="Расширен ассортимент"><span class="title">перфораторы</span></a>,<br>
+  &emsp;&emsp;&emsp;&ensp;<a href="/catalog/cat216.shtml" title="Новые товары"><span class="title">дрели</span></a>,
+  <a href="/catalog/cat201.shtml" title="Новый товар"><span class="title">шуруповерт</span></a>,
+  <a href="/catalog/cat431.shtml" title="Расширен ассортимент"><span class="title">миксеры</span></a><br>
 <DT>31 окт: <DD><a href="/catalog/cat95.shtml"  title="Новые товары"><span class="title">Сапоги кожаные утепленные</span><span class="dop"></span></a><br>
 <DT>31 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер металл.</span><span class="dop"> "All-Be-Fix"</span></a><br>
 <DT>26 окт: <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент"><span class="title">Диски алмазные сплошные</span><span class="dop"></span></a><br>
