--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -7,7 +7,7 @@
 <DL style="max-width: 25em"><DT>П:<DD>0<DT>О:<DD>0</DL>
 </span></p><UL><LI>.</UL><p><span class="addt">
  <span class="art">арт. </span>
- /<span class="blue"> BOHRER,</span>
+&nbsp;/<span class="blue">&nbsp;BOHRER,</span>
 </span><span class="for">
 </span><span class="addt">
 <br><b>Цена за упаковку 10 штук.</b>
@@ -19,8 +19,8 @@
 {obj_fld}{51}{14}{18}
 {obj_fld}{66}{51}{42}
   
-<p class="callprice"></p>
 ============================== Свойство "Описание"
+<p class="callprice"></p>
 <p class="onlyrest"></p>
 ==============================
   https://google.gik-team.com/?q=%D0%BF%D1%80%D0%B8%D0%BA%D0%BE%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5+%D0%BF%D0%BE%D0%B7%D0%B4%D1%80%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D1%8F+%D1%81+8+%D0%BC%D0%B0%D1%80%D1%82%D0%B0
