--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -32,7 +32,8 @@
 {507,508,516}
 ============================== Инфоблоки
 <a href="/about/contact.shtml" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a></p>
-<p class="adres time">с понедельника по пятницу, с <b>8:00</b> до <b>18:00</b></p>
+<!--<p class="adres time">с понедельника по пятницу, с <b>8:00</b> до <b>18:00</b></p>-->
+<p class="adres time">с пн по пт, с <b>8:00</b> до <b>18:00</b> (склад до <b>17:00</b>)</p>
 <p class="adres cm">Заявки онлайн круглосуточно
 ============================== Остатки
 {obj_fld}{51}{79}{42}
