--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>26 мар: <DD><a href="/catalog/cat138.shtml" title="Новые товары: Кувалды кованые HARDAX с удлиненной (900 мм) обрезиненной фибергласовой рукояткой"><span class="title">Кувалды на длинной рукоятке</span><span class="dop"></span></a><br>
   <DT>21 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Строительные рулетки</span><span class="dop"> BOHRER</span></a><br>
   <DT>16 фев: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> KRAFTOOL</span></a><br>
   <DT>05 фев: <DD><a href="/catalog/cat420.shtml" title="Новые товары: Свёрла и коронки алмазные по керамограниту и керамике HAGWERT"><span class="title">Свёрла и коронки алмазные</span><span class="dop"></span></a><br>
@@ -77,7 +78,7 @@
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
         href="/img/pic/shmal/big/5110-10.jpg" title="Большое фото: Валики Roma 18 (HARDY, Польша)"><img src="/img/pic/shmal/small/5110-10.jpg" width="98"></a>
-      </td>
+    </td>
       <td class="good-txt"><a href="/catalog/cat559.shtml"
         title="Валики Roma 18 (HARDY, Польша) на нашем сайте">
         <p>
