--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,13 @@
+<DT>05 фев: <DD><a href="/catalog/cat420.shtml" title="Новые товары: Свёрла и коронки алмазные по керамограниту и керамике HAGWERT"><span class="title">Свёрла и коронки алмазные</span><span class="dop"></span></a><br>
+<DT>02 фев: <DD><a href="/catalog/cat227.shtml" title="Новые товары"><span class="title">Фонари св.-диодные</span><span class="dop"> NAVIGATOR</span></a><br>
+<DT>01 фев: <DD><a href="/catalog/cat87.shtml"  title="Новый товар"><span class="title">Перчатки с покрытием</span><span class="dop"> NITRAS</span></a><br>
+<DT>15 янв: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Торцевые головки</span></a> <a href="/catalog/cat262.shtml" title="Наборы торцевых головок: Расширен ассортимент"><span class="dop">OMBRA</span></a><br>
+<DT>15 янв: <DD><a href="/catalog/cat265.shtml" title="Новые товары"><span class="title">Трещотки</span><span class="dop"> THORVIK, JONNESWAY</span></a><br>
+<DT>25 дек: <DD><a href="/catalog/cat519.shtml" title="Значительно расширен ассортимент"><span class="title">Фасадные валики</span><span class="dop"> MaxProfi</span></a><br>
+<DT>25 дек: <DD><a href="/catalog/cat153.shtml" title="Новые товары"><span class="title">Кельмы угловые</span><span class="dop"> HARDY</span></a><br>
+<DT>22 дек: <DD><a href="/catalog/cat521.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Распродажа валиков</span><span class="dop"> Eurofaza!!!</span></a><br>
+<DT>21 дек: <DD><a href="/catalog/cat525.shtml" title="Расширен ассортимент"><span class="title">Валики велюровые</span><span class="dop"> HARDY</span></a><br>
+<DT>13 дек: <DD><a href="/catalog/cat618.shtml" title="Новый товар"><span class="title">Промышленный пылесос</span><span class="dop"> GR&Ouml;NE</span></a><br>
 <DT>29 ноя: <DD><a href="/catalog/cat510.shtml" title="Новый товар"><span class="title">Гладилка закругленная</span><span class="dop"> &laquo;Stucco&raquo;</span></a><br>
 <DT>25 ноя: <DD><a href="/catalog/cat89.shtml"  title="Новые товары"><span class="title">Краги спилковые</span><span class="dop"> «Blue Welder»</span></a><br>
 <DT>20 ноя: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Монтаж. пена</span><span class="dop"> KIM TEC зимняя</span></a><br>
