--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -13,6 +13,14 @@
 <br><b>Цена за упаковку 10 штук.</b>
 <abbr title="м">П</abbr>
 <table cellpadding=0 cellspacing=0 border=0><tr><td>красный<td class=art>арт. 2</table>
+
+<LI>Имеется <a href="pdf" target=_blank title="Документ PDF">Руководство по эксплуатации</a>.
+<LI>Имеется <a href="pdf" target=_blank title="Документ PDF">Сертификат соответствия</a>.
+<br>Имеется <a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank title="Документ PDF">сертификат пожарной безопасности</a>.</span></p></td><td align=center><a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank><img style="border:none" src=/img/pic/foam/small/Cert_Profpur.JPG title="Картинка: Сертификат пожарной безопасности"></a><p><span>
+</span></p></td>
+Имеется <a href=/img/pic/foam/big/Certificate.JPG target=_blank title="Картинка JPG">сертификат пожарной безопасности</a>.<LI>Технические характеристики: <a href=/img/pic/foam/big/FOME-PRO-2.pdf target=_blank title="Документ PDF">Mounting Foam</a>, <a href=/img/pic/foam/big/FOME-PRO-1.pdf target=_blank title="Документ PDF">Gun Foam</a></UL></span></p></td><td class=nop align=center width=1><a href=/img/pic/foam/big/Certificate.JPG target=_blank><img style=border:none; src=/img/pic/foam/small/Certificate.JPG title="Сертификат пожарной безопасности"></a><p><span>
+</span></p></td></LI>
+
 {obj_fld}{51}{14}{18}{45}
 {obj_fld}{51}{70}
 {obj_fld}{51}{42}
@@ -33,6 +41,9 @@
 Свойства для сортировки - №№ категорий:
 {507,508,516}
 ,228,506
+============================== Инфоблоки
+Сделал настройку в модуле "Каталог товаров" - no_goods_text - она выводится, когда нет списка товаров.
+"Товар временно отсутствует в продаже"
 ============================== Инфоблоки
 <a href="/about/contact.shtml" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a></p>
 <p class="adres time">С понедельника по пятницу, с <b>8:00</b> до <b>18:00</b></p>
@@ -68,12 +79,6 @@
 </tr>
 </table></td></tr></table></a></div>
   ==============================
-
-<LI>Имеется <a href="pdf" target=_blank title="Документ PDF">Руководство по эксплуатации</a>.</LI>
-<br>Имеется <a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank title="Документ PDF">сертификат пожарной безопасности</a>.</span></p></td><td align=center><a href=/img/pic/foam/big/Cert_Profpur.pdf target=_blank><img style="border:none" src=/img/pic/foam/small/Cert_Profpur.JPG title="Картинка: Сертификат пожарной безопасности"></a><p><span>
-</span></p></td>
-Имеется <a href=/img/pic/foam/big/Certificate.JPG target=_blank title="Картинка JPG">сертификат пожарной безопасности</a>.<LI>Технические характеристики: <a href=/img/pic/foam/big/FOME-PRO-2.pdf target=_blank title="Документ PDF">Mounting Foam</a>, <a href=/img/pic/foam/big/FOME-PRO-1.pdf target=_blank title="Документ PDF">Gun Foam</a></UL></span></p></td><td class=nop align=center width=1><a href=/img/pic/foam/big/Certificate.JPG target=_blank><img style=border:none; src=/img/pic/foam/small/Certificate.JPG title="Сертификат пожарной безопасности"></a><p><span>
-</span></p></td></LI>
 
 <br>Распродажа ограничена количеством товара на складе.
 
