--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,19 +1,15 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 мая: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
+  <DT>20 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Силикон строительный</span><span class="dop"> SOUDAL</span></a><br>
+  <DT>19 апр: <DD><a href="/catalog/cat270.shtml" title="Новые товары"><span class="title">Монтажный клей</span><span class="dop"> T-REX</span></a><br>
+  <DT>18 апр: <DD><a href="/catalog/cat194.shtml" title="Новый товар"><span class="title">Очиститель монт. пены</span><span class="dop"> Profil</span></a><br>
+  <DT>16 апр: <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор HP3-0101</span><span class="dop"> кл.з. FFP1</span></a><br>
+  <DT>13 апр: <DD><a href="/catalog/cat585.shtml" title="Новые товары"><span class="title">Мини-валики сменные</span><span class="dop"> Синтекс</span></a><br>
   <DT>04 апр: <DD><a href="/catalog/cat24.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена: Круг отрезной по металлу 230 х 2.5 х 22"><span class="title">Круг отрезной по металлу</span><span class="dop"></span></a><br>
   <DT>26 мар: <DD><a href="/catalog/cat138.shtml" title="Новые товары: Кувалды кованые HARDAX с удлиненной (900 мм) обрезиненной фибергласовой рукояткой"><span class="title">Кувалды на длинной рукоятке</span><span class="dop"></span></a><br>
   <DT>21 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Строительные рулетки</span><span class="dop"> BOHRER</span></a><br>
   <DT>16 фев: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> KRAFTOOL</span></a><br>
-  <DT>05 фев: <DD><a href="/catalog/cat420.shtml" title="Новые товары: Свёрла и коронки алмазные по керамограниту и керамике HAGWERT"><span class="title">Свёрла и коронки алмазные</span><span class="dop"></span></a><br>
-  <DT>02 фев: <DD><a href="/catalog/cat227.shtml" title="Новые товары"><span class="title">Фонари св.-диодные</span><span class="dop"> NAVIGATOR</span></a><br>
-  <DT>01 фев: <DD><a href="/catalog/cat87.shtml"  title="Новый товар"><span class="title">Перчатки с покрытием</span><span class="dop"> NITRAS</span></a><br>
-  <DT>15 янв: <DD><a href="/catalog/cat269.shtml" title="Новые товары"><span class="title">Торцевые головки</span></a> <a href="/catalog/cat262.shtml" title="Наборы торцевых головок: Расширен ассортимент"><span class="dop">OMBRA</span></a><br>
-  <DT>15 янв: <DD><a href="/catalog/cat265.shtml" title="Новые товары"><span class="title">Трещотки</span><span class="dop"> THORVIK, JONNESWAY</span></a><br>
-  <DT>25 дек: <DD><a href="/catalog/cat519.shtml" title="Значительно расширен ассортимент"><span class="title">Фасадные валики</span><span class="dop"> MaxProfi</span></a><br>
-  <DT>25 дек: <DD><a href="/catalog/cat153.shtml" title="Новые товары"><span class="title">Кельмы угловые</span><span class="dop"> HARDY</span></a><br>
-  <DT>22 дек: <DD><a href="/catalog/cat521.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title">Распродажа валиков</span><span class="dop"> Eurofaza!!!</span></a><br>
-  <DT>21 дек: <DD><a href="/catalog/cat525.shtml" title="Расширен ассортимент"><span class="title">Валики велюровые</span><span class="dop"> HARDY</span></a><br>
-  <DT>13 дек: <DD><a href="/catalog/cat618.shtml" title="Новый товар"><span class="title">Промышленный пылесос</span><span class="dop"> GR&Ouml;NE</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
