--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>16 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика </span><span class="dop"></span></a><br>
   <DT>03 мая: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
   <DT>20 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Силикон строительный</span><span class="dop"> SOUDAL</span></a><br>
   <DT>19 апр: <DD><a href="/catalog/cat270.shtml" title="Новые товары"><span class="title">Монтажный клей</span><span class="dop"> T-REX</span></a><br>
