--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,6 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>16 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика </span><span class="dop"></span></a><br>
+  <DT>22 мая: <DD><a href="/catalog/cat301.shtml" title="Новый товар"><span class="title">Уровень строит.</span><span class="dop"> HARDY Profi</span></a><br>
+  <DT>21 мая: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены </span><span class="dop"></span></a><br>
+  <DT>18 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика </span><span class="dop"></span></a><br>
   <DT>03 мая: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
   <DT>20 апр: <DD><a href="/catalog/cat176.shtml" title="Новый товар"><span class="title">Силикон строительный</span><span class="dop"> SOUDAL</span></a><br>
   <DT>19 апр: <DD><a href="/catalog/cat270.shtml" title="Новые товары"><span class="title">Монтажный клей</span><span class="dop"> T-REX</span></a><br>
@@ -8,9 +10,6 @@
   <DT>16 апр: <DD><a href="/catalog/cat92.shtml"  title="Новый товар"><span class="title">Респиратор HP3-0101</span><span class="dop"> кл.з. FFP1</span></a><br>
   <DT>13 апр: <DD><a href="/catalog/cat585.shtml" title="Новые товары"><span class="title">Мини-валики сменные</span><span class="dop"> Синтекс</span></a><br>
   <DT>04 апр: <DD><a href="/catalog/cat24.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена: Круг отрезной по металлу 230 х 2.5 х 22"><span class="title">Круг отрезной по металлу</span><span class="dop"></span></a><br>
-  <DT>26 мар: <DD><a href="/catalog/cat138.shtml" title="Новые товары: Кувалды кованые HARDAX с удлиненной (900 мм) обрезиненной фибергласовой рукояткой"><span class="title">Кувалды на длинной рукоятке</span><span class="dop"></span></a><br>
-  <DT>21 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Строительные рулетки</span><span class="dop"> BOHRER</span></a><br>
-  <DT>16 фев: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> KRAFTOOL</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
