--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,3 +1,6 @@
+<DT>26 мар: <DD><a href="/catalog/cat138.shtml" title="Новые товары: Кувалды кованые HARDAX с удлиненной (900 мм) обрезиненной фибергласовой рукояткой"><span class="title">Кувалды на длинной рукоятке</span><span class="dop"></span></a><br>
+<DT>21 мар: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Строительные рулетки</span><span class="dop"> BOHRER</span></a><br>
+<DT>16 фев: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> KRAFTOOL</span></a><br>
 <DT>05 фев: <DD><a href="/catalog/cat420.shtml" title="Новые товары: Свёрла и коронки алмазные по керамограниту и керамике HAGWERT"><span class="title">Свёрла и коронки алмазные</span><span class="dop"></span></a><br>
 <DT>02 фев: <DD><a href="/catalog/cat227.shtml" title="Новые товары"><span class="title">Фонари св.-диодные</span><span class="dop"> NAVIGATOR</span></a><br>
 <DT>01 фев: <DD><a href="/catalog/cat87.shtml"  title="Новый товар"><span class="title">Перчатки с покрытием</span><span class="dop"> NITRAS</span></a><br>
