--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>25 мая: <DD><a href="/catalog/cat216.shtml" title="Цены снижены. Распродажа!"><span class="title">Дрели ударные</span><span class="dop"> GR&Ouml;NE</span></a><br>
   <DT>22 мая: <DD><a href="/catalog/cat301.shtml" title="Новый товар"><span class="title">Уровень строит.</span><span class="dop"> HARDY Profi</span></a><br>
   <DT>21 мая: <DD><a href="/catalog/cat191.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для монт. пены </span><span class="dop"></span></a><br>
   <DT>18 мая: <DD><a href="/catalog/cat192.shtml" title="Расширен ассортимент"><span class="title">Пистолеты для герметика </span><span class="dop"></span></a><br>
