--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>18 июн: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Латексные перчатки</span><span class="dop"> HARDY</span></a><br>
   <DT>04 июн: <DD><a href="/catalog/cat175.shtml" title="Расширен ассортимент"><span class="title">Монтаж. пена</span><span class="dop"> SOUDAL (Бельгия)</span></a><br>
   <DT>25 мая: <DD><a href="/catalog/cat216.shtml" title="Цены снижены. Распродажа!"><span class="title">Дрели ударные</span><span class="dop"> GR&Ouml;NE</span></a><br>
   <DT>22 мая: <DD><a href="/catalog/cat301.shtml" title="Новый товар"><span class="title">Уровень строит.</span><span class="dop"> HARDY Profi</span></a><br>
@@ -64,10 +65,10 @@
       <td align="center" width=1>
         <a class="cboxElement" href="/img/pic/shmal/big/0201-545750n.jpg" title="Большое фото: Кисть плоская ПРОФИ 70 мм (HARDY, Польша)"><img src="/img/pic/shmal/small/0201-545750n.jpg" width="98"></a>
       </td>
-      <td class="good-txt"><a href="/catalog/cat535.shtml"
+      <td class="good-txt"><a href="/catalog/cat569.shtml"
         title="Кисть плоская ПРОФИ 70 мм (HARDY, Польша) на нашем сайте">
         <p>
-          <span class="title">Кисть плоская с. 54 ПРОФИ, 70 мм</span><span class="dop"><br>(HARDY, Польша)</span>
+          <span class="title">Кисти плоские с. 54 ПРОФИ, 30 - 100 мм</span><span class="dop"><br>(HARDY, Польша)</span>
           <span class="addt"><br>Для красок и лаков на основе растворителей</span>
         </p></a>
   </table>
